--- a/index.html
+++ b/index.html
@@ -33,13 +33,13 @@
      </div>
     <br>
        <section class="footer">
-        <div class="footer-content">
-          <a href="https://drive.google.com/file/d/14c3iXuH6M9chUD-D6EdQT1vhNFUY0zWD/"><img src="cv.png" width="48" height="48"</a>
+        <div class="footer-content">    
+    Thanks for Visiting My Website <br>
+    Copyright© 2025 All Rights Resirved<br>
+    <a href="https://drive.google.com/file/d/14c3iXuH6M9chUD-D6EdQT1vhNFUY0zWD/"><img src="cv.png" width="48" height="48"</a>
 <a href="https://in.linkedin.com/in/parthsankhyan-9b23b2336/target="_blank"><img src="LinkedIn.png "width="48" height="48"> </a>
  <a href="https://instagram.com/parth_sankhyan/target="_blank"><img src="Instagram.png" width="48" height="48"></a> 
-<a href="mailto:parthsankhyanofficial@gmail.com"><img src="mail.png" width="100" height="100"></a>     
-    Thanks for Visiting My Website <br>
-    Copyright© 2025 All Rights Resirved 
+<a href="mailto:parthsankhyanofficial@gmail.com"><img src="mail.png" width="100" height="100"></a> 
         </div>
  </section>
   </body>
