--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
    
   <body>
     <p>
-    <h1 align= "center"> Parth Sharma </h1>
-    <h2>Education</h2> </p>
+    <h1 align= "center";style="color: red;"> Parth Sharma </h1>
+    <h2 style="color: Blue;">Education</h2> 
     <div class="bordered">
       <p><a href="https://hppwd.hp.gov.in/"target="blank"><img align="center" src="gpk.png"width="400" height="400"></a></p>   
       <p align=center"> Diploma In Civil Engineering From Govt Polytechnic Kinnaur At Govt Polytechnic Rohru distt Shimla H.P</p>
     </div>
     <br>
-<h2>Practical Knowledge </h2>
+<h2 style="color: Blue;">Practical Knowledge </h2>
        <div class="bordered">
 <p align= "center"><a href="https://hppwd.hp.gov.in/" target="_blank"><img src="hppwd.png"> </p>
 </a>                              
@@ -25,7 +25,7 @@
  Construction Site Civil Hospital Sundernagar</p>   
   </div>
   <br>
-<h2 align=left> Skills </h2>
+<h2 style="color: Blue;"> Skills </h2>
 <div class="bordered">
   <p align="center"><img align="center"src="msexcel.png" width="400" height="400"</p>
   <p> Course Of Microsoft office Excel Course From <a href="https://crafteducation.in">Craft Education Sundernager </a> </p>
@@ -37,7 +37,7 @@
     Copyright© 2025 All Rights Resirved<br>
         </div>
           <div class="social-links">
-            <p align= "center">
+            <p align= "Right">
     <a href="https://drive.google.com/file/d/14c3iXuH6M9chUD-D6EdQT1vhNFUY0zWD/"><img src="cv.png" width="34" height="34"</a>
 <a href="https://in.linkedin.com/in/parthsankhyan-9b23b2336/target="_blank"><img src="LinkedIn.png "width="48" height="34"> </a>
  <a href="https://instagram.com/parth_sankhyan/target="_blank"><img src="Instagram.png" width="34" height="34"></a> 
