--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       <a href="https://drive.google.com/file/d/14c3iXuH6M9chUD-D6EdQT1vhNFUY0zWD/"><img src="cv.png" width="34" height="34"</a>
 <a href="https://in.linkedin.com/in/parthsankhyan-9b23b2336/target="_blank"><img src="LinkedIn.png "width="48" height="34"> </a>
  <a href="https://instagram.com/parth_sankhyan/target="_blank"><img src="Instagram.png" width="34" height="34"></a> 
-<a href="mailto:parthsankhyanofficial@gmail.com"><img src="mail.png" width="34" height="34"> </a>
+<a href="mailto:parthsankhyanofficial@gmail.com"><img src="mail.png" width="48" height="48"> </a>
     </a> </p>
   </header>
 </head> 
@@ -26,23 +26,21 @@
        <div class="bordered">
 <p align= "center"><a href="https://hppwd.hp.gov.in/" target="_blank"><img src="hppwd.png"> </p>
 </a>                              
- <p> 3weeks Industrial Training At  HPPWD Office <a href="https://hpmandi.nic.in/tourist-place/sundernagar">Sundernagar Distt Mandi Himachal Pradesh </a>
- From 06-01-2024 To 25-01-2024
- Construction Site Civil Hospital Sundernagar</p>   
+ <p> 3weeks Industrial Training At  HPPWD Office <br> </be><a href="https://hpmandi.nic.in/tourist-place/sundernagar">Sundernagar Distt Mandi Himachal Pradesh </a>
+<br> From 06-01-2024 To 25-01-2024
+<br>Construction Site Civil Hospital Sundernagar</p>   
   </div>
   <br>
 <h2 style="color: Blue;"> Skills </h2>
 <div class="bordered">
   <p align="center"><img align="center"src="msexcel.png" width="400" height="400"</p>
   <p> Course Of Microsoft office Excel Course From <a href="https://crafteducation.in">Craft Education Sundernager </a> </p>
-     </div>
-    <>br
+</div>
        <section class="footer">
         <div class="footer-content">    
-          Contact Me <a href ="mailto:parthsankhyanofficial@gmail.com">here</a><br>
+          Contact Me :- parthsankhyanofficial@gmail.com<br>
     Thanks for Visiting My Website <br>
     Copyright© 2025 All Rights Reserved
-        
             </p>
         </div>
  </section>
