--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 <h2 style="color: Blue;"> Skills </h2>
 <div class="bordered">
   <p align="center"><img align="center"src="msexcel.png" width="400" height="400"</p>
-  <p> Course Of Microsoft office Excel Course From <a href="https://crafteducation.in">Craft Education Sundernager </a> </p>
+  <p> Course Of Microsoft office Excel Course From <br> <a href="https://crafteducation.in">Craft Education Sundernager </a> </p>
 </div>
        <section class="footer">
         <div class="footer-content">    
