--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   <p align="center"><img align="center"src="msexcel.png" width="400" height="400"</p>
   <p> Course Of Microsoft office Excel Course From <br> <a href="https://crafteducation.in">Craft Education Sundernager </a> </p>
 </div>
-    <script src="script-py></script>
+   <p><script src="script-py> </script></p>
        <section class="footer">
         <div class="footer-content">   
           <b>
